@@ -1,3 +1,7 @@
+	20100401 (Till Straumann):
+
+	* BLDApp/src/BLDMCast.c: Read fast data from FCOM (1st shot at things).
+
 	20100326 (Till Straumann):
 
 	* BLDApp/src/BLDMCast.c: Use timestamp returned by evrTimeGetFromPipeline()
